[package]
name = "borrowing"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "borrowing"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
stress_test = []

[dependencies]
anchor-spl = "0.18.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
anchor-lang = "0.18.0"
pyth-client = "*"
uint = { version = "0.9.1", default-features = false }
num-traits = "0.2"
num = "0.4"
num-derive = "0.3"
struct-arithmetic = "0.1.0"
vipers = "1.5.3"
decimal-wad = "0.1.2"

[dev-dependencies]
solana-sdk = "^1.7.11"
solana-program-test = "^1.7.11"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.6.0"